--- a/package.json
+++ b/package.json
@@ -7,25 +7,26 @@
     "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@testing-library/user-event": "^12.8.3",
     "@voxeet/voxeet-web-sdk": "3.1.6",
     "airtable": "^0.9.0",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
-    "core-js": "^3.19.1",
+    "core-js": "^3.19.0",
     "d3": "^7.0.0",
     "firebase": "^8.10.0",
     "node-sass": "^6.0.1",
-    "react": "^16.13.1",
+    "react": "^17.0.2",
     "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "PORT=3003 react-scripts start",
-    "build": "react-scripts build",
+    "build": "PUBLIC_URL=./ react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -46,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.35.2"
   }
 }
