--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "constracker",
-  "homepage": "http://constructiontrack1ng.com",
+  "homepage": "http://parappliance.com/blog2/react-test/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
